@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
 #
 
+2005-10-23 16:22:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-29
+
+    Summary:
+      web, add headers to the response (Date, Connection and Server)
+    Revision:
+      itools--main--0.11--patch-29
+
+
+    modified files:
+     Changelog web/response.py
+
+
 2005-10-23 08:33:03 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-28
 
     Summary:
